--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.snackbar-success{
+    background: #4bb543;
+}
+
+.snacbar-error{
+    background: #bb2124;
+}
