--- a/client/src/components/modal-file-upload/modal-file-upload.component.html
+++ b/client/src/components/modal-file-upload/modal-file-upload.component.html
@@ -1,9 +1,9 @@
 <h1 mat-dialog-title>Hi There</h1>
 <div mat-dialog-content>
-  <p>Do you want to upload image? If Yes, Please upload the image</p>
+  <p>Please upload the image</p>
     <input type="file" accept="image/*" (change)="upload($event)">
 </div>
 <div mat-dialog-actions>
-  <button mat-button [mat-dialog-close]="failedReturn()">No Thanks</button>
+  <button mat-button [mat-dialog-close]="failedReturn()">Cancel</button>
   <button mat-button [mat-dialog-close]="successReturn()" cdkFocusInitial>Okay</button>
 </div>
